--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h2>Jacob Shomali</h2>
+        <nav>
+            <a href="./index.html">Home</a>
+            <a href="./about.html">About</a>
+            <a href="./contact.html">Contact</a>
+            <a href="./projects.html">Projects</a>
+        </nav>
+    </header>
+    
     
 </body>
 </html>
