--- a/index.html
+++ b/index.html
@@ -19,17 +19,40 @@
             <a href="./projects.html">Projects</a>
             </nav>
         </div>
-        <div class="project-container">
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-        </div>
     </header>
-    
+    <div class="project-container">
+        <div class="project-card">
+            <img src="na" alt="">
+            <h3 class="project-title"></h3>
+        </div>
+        <div class="project-card">
+            <img src="na" alt="">
+            <h3 class="project-title"></h3>
+        </div>
+        <div class="project-card">
+            <img src="na" alt="">
+            <h3 class="project-title"></h3>
+        </div>
+        <div class="project-card">
+            <img src="na" alt="">
+            <h3 class="project-title"></h3>
+        </div>
+        <div class="project-card">
+            <img src="na" alt="">
+            <h3 class="project-title"></h3>
+        </div>
+        <div class="project-card">
+            <img src="na" alt="">
+            <h3 class="project-title"></h3>
+        </div>
+        <div class="project-card">
+            <img src="na" alt="">
+            <h3 class="project-title"></h3>
+        </div>
+    </div>
+    <footer>
+        <button class="contact-button">Contact me</button>
+    </footer>
     
 </body>
 </html>
