links for repos and live servers

--- a/index.html
+++ b/index.html
@@ -22,32 +22,46 @@
     </header>
     <div class="project-container">
         <div class="project-card">
-            <img src="na" alt="">
+            <img src="../" alt="">
             <h3 class="project-title"></h3>
+            <a href="" class="repo-link"></a>
+            <a href="" class="live-server-link"></a>
         </div>
         <div class="project-card">
             <img src="na" alt="">
             <h3 class="project-title"></h3>
+            <a href="" class="repo-link"></a>
+            <a href="" class="live-server-link"></a>
         </div>
         <div class="project-card">
             <img src="na" alt="">
             <h3 class="project-title"></h3>
+            <a href="" class="repo-link"></a>
+            <a href="" class="live-server-link"></a>
         </div>
         <div class="project-card">
             <img src="na" alt="">
             <h3 class="project-title"></h3>
+            <a href="" class="repo-link"></a>
+            <a href="" class="live-server-link"></a>
         </div>
         <div class="project-card">
             <img src="na" alt="">
             <h3 class="project-title"></h3>
+            <a href="" class="repo-link"></a>
+            <a href="" class="live-server-link"></a>
         </div>
         <div class="project-card">
             <img src="na" alt="">
             <h3 class="project-title"></h3>
+            <a href="" class="repo-link"></a>
+            <a href="" class="live-server-link"></a>
         </div>
         <div class="project-card">
             <img src="na" alt="">
             <h3 class="project-title"></h3>
+            <a href="" class="repo-link"></a>
+            <a href="" class="live-server-link"></a>
         </div>
     </div>
     <footer>
