--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> ABOUT </h1>
+    <h1> About Me </h1>
+    <p>I'm just a guy.</p>
 </body>
 </html>
