--- a/contact.html
+++ b/contact.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1> CONTACT </h1>
+    <p>Phone: 1 (810) 231-5851</p>
+    <p>Email: jacobshomali3@gmail.com</p>
 </body>
 </html>
